add the services we provide area

--- a/index.html
+++ b/index.html
@@ -31,3 +31,7 @@
     <p>we help translate them into active and elegant solutions.</p>
 </div>
 
+        <!--add our services-->
+  <div class="container what-we-do">
+    <h2 class="headings">WHAT WE DO</h2>
+    <div class="row">
