--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
       </div>
       </div> 
 
+
+
+            <!--form-->
       <div class="container-fluid contact">
         <h2>CONTACT US</h2>
       
