--- a/index.html
+++ b/index.html
@@ -144,5 +144,23 @@
         </form>
       </div>
 
+
+      <!---footer-->
+
+ <footer>
+    <img src="images/social_icons/twitter.png" alt="twitter">
+    <img src="images/social_icons/dribble.png" alt="dribble">
+    <img src="images/social_icons/facebook.png" alt="facebook">
+    <img src="images/social_icons/g_plus.png" alt="g_plus">
+    <img src="images/social_icons/skype.png" alt="skype">
+    <img src="images/social_icons/stumble_upon.png" alt="stumble_upon">
+    <img src="images/social_icons/behance.png" alt="behance">
+    <img src="images/social_icons/pinterest.png" alt="pinterest">
+    <img src="images/social_icons/flickr.png" alt="flickr">
+  
+    <p>DELANI STUDIO</p>
+    <p>2021</p>
+  </footer>
+
       
 
