--- a/index.html
+++ b/index.html
@@ -162,5 +162,10 @@
     <p>2021</p>
   </footer>
 
+  <script src="js/jquery-3.4.1.js"></script>
+  <script src="js/script.js"></script>
+</body>
+</html>
+
       
 
