--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="shortcut icon" href="../images/Delaninew.ico" />
+  <link rel="shortcut icon" href="./images/logo/logo.png" />
   <title>Delani Studio</title>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
@@ -30,6 +30,15 @@
     <p>We start each project by understanding your business goals, the users needs and the product requirements.</p>
     <p>we help translate them into active and elegant solutions.</p>
 </div>
+ 
+<div class="services">
+  <div id="servicesoverlay">
+    <h2>SERVICES</h2>
+    <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to understand your product vission.</p>
+    <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
+    <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
+  </div>
+</div> 
 
         <!--add our services-->
   <div class="container what-we-do">
